Reworded homepage, fixed overflowing text, added icons

--- a/resources/rawassets/css/style.scss
+++ b/resources/rawassets/css/style.scss
@@ -429,6 +429,29 @@ p code
     }
 }
 
+.highlight-wrapper
+{
+    ul
+    {
+        padding: 0;
+
+        li
+        {
+            padding-left: 1.3em;
+            list-style: none;
+
+            &:before
+            {
+                content: "+";
+                display: inline-block;
+                margin-left: -1.3em;
+                width: 1em;
+                color: #777;
+            }
+        }
+    }
+}
+
 .scroll-anchor
 {
     padding-top: $headerHeight;
